<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExplicitActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewExplicit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewExplict"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewSingle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewSingle" />

            <EditText
                android:id="@+id/editTextSingle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/editTextSingle" />

            <TextView
                android:id="@+id/textViewBundle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewBundle" />

            <EditText
                android:id="@+id/editTextBundle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/editTextBundle" />

            <EditText
                android:id="@+id/editTextResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/editTextResult" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>